coc-flutter settings

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -3,4 +3,15 @@
     "dart",
     "html"
   ],
+  "dart.analysisExcludedFolders": [
+    ".fvm",
+    "build",
+    "tests",
+    "assets",
+    ".idea",
+    ".dart_tool",
+    ".slidy",
+    "android",
+    "ios"
+  ]
 }
