--- a/alacritty.yml
+++ b/alacritty.yml
@@ -62,7 +62,7 @@ font:
   # Normal (roman) font face
   normal:
     # Font family
-    family: Fira Code
+    family: FiraCode Nerd Font
     # The `style` can be specified to pick a specific face.
     style: Regular
 
