--- a/starship.toml
+++ b/starship.toml
@@ -4,6 +4,19 @@
 # Inserts a blank line between shell prompts
 add_newline = false
 
-# Replace the "❯" symbol in the prompt with "➜"
+# Replace the "❯" symbol in the prompt with "~>"
 [character] # The name of the module we are configuring is "character"
-success_symbol = "[➜](bold green)" # The "success_symbol" segment is being set to "➜" with the color "bold green"
+success_symbol = "[~>](bold green)" # The "success_symbol" segment is being set to ~>" with the color "bold green"
+error_symbol = "[✗](bold red)"
+
+[username]
+style_user = "#ff99ff"
+style_root = "red bold"
+format = "[$user]($style) in "
+disabled = false
+show_always = true
+
+[nodejs]
+format = "via [ $version](bold green) "
+detect_files = ["package.json", ".node-version"]
+detect_folders = ["node_modules"]
