--- a/kitty.conf
+++ b/kitty.conf
@@ -6,7 +6,7 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
- font_family      Fira Code
+font_family      Fira Code
 # bold_font        auto
 # italic_font      auto
 # bold_italic_font auto
@@ -23,7 +23,7 @@
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
- font_size 8.5
+font_size 11
 
 #: Font size (in pts)
 
@@ -1043,7 +1043,7 @@ initial_window_height 400
 #: Hide the kitty window from running tasks (⌘+Tab) on macOS. Changing
 #: this setting by reloading the config is not supported.
 
-# macos_quit_when_last_window_closed no
+macos_quit_when_last_window_closed yes
 
 #: Have kitty quit when all the top-level windows are closed. By
 #: default, kitty will stay running, even with no open windows, as is
@@ -1480,6 +1480,8 @@ initial_window_height 400
 
 #:     map ctrl+alt+a send_text normal Word\x1b[H
 #:     map ctrl+alt+a send_text application Word\x1bOH
+
+map ctrl+f launch --type=overlay --stdin-source=@screen_scrollback fzf --no-sort --no-mouse --exact -i
 
 #: }}}
 
