--- a/.zpreztorc
+++ b/.zpreztorc
@@ -133,7 +133,14 @@ zstyle ':prezto:module:editor' key-bindings 'emacs'
 # Set the prompt theme to load.
 # Setting it to 'random' loads a random theme.
 # Auto set to 'off' on dumb terminals.
-zstyle ':prezto:module:prompt' theme 'steeef'
+# Add additional directories to load prezto modules from
+zstyle ':prezto:load' pmodule-dirs ${ZDOTDIR:-$HOME}/.zprezto-prompt-contrib
+
+# Allow module overrides when pmodule-dirs causes module name collisions
+zstyle ':prezto:load' pmodule-allow-overrides 'yes'
+
+
+zstyle ':prezto:module:prompt' theme 'starship'
 
 # Set the working directory prompt display length.
 # By default, it is set to 'short'. Set it to 'long' (without '~' expansion)
